# Substrate-Moloch-V1

./: Cargo.toml  README.md
doc/: test-guide.md
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/moloch-v1/: Cargo.toml
pallets/moloch-v1/src/: lib.rs  mock.rs  tests.rs  types.json
pallets/quadratic-funding/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
