[package]
authors = ['DoraFactory <https://github.com/DoraFactory/Substrate-Moloch-V1>']
description = 'FRAME pallet Moloch V1'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'MIT'
name = 'pallet-moloch-v1'
repository = 'https://github.com/DoraFactory/Substrate-Moloch-V1/'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
pallet-balances = { version = "2.0.1", default-features = false}
sp-std = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
serde = { version = "1.0.101", optional = true, features = ["derive"] }


[dev-dependencies]
sp-core = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'serde',
]
